# spec-workflow

./: .gitignore  .spec-workflow  README.md  README.zh-TW.md  settings.json
.claude/: carryover-allowlist.txt  scaff.manifest  settings.local.json
.specaffold/: config.yml  preflight.md
docs/: rename-migration.md
flow-monitor/: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
flow-monitor/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
flow-monitor/src-tauri/capabilities/: default.json
flow-monitor/src-tauri/src/: archive_discovery.rs  artefact_presence.rs  audit.rs  command_taxonomy.rs  fs_watcher.rs  invoke.rs  ipc.rs  lib.rs  lock.rs  main.rs  notify.rs  poller.rs  repo_discovery.rs  settings.rs  status_parse.rs  store.rs  tray.rs
flow-monitor/src-tauri/tests/: archive_discovery_tests.rs  artefact_presence_tests.rs  fs_watcher_latency.rs  notify_dedupe_test.rs  poller_integration.rs  repo_discovery_tests.rs  seam4_no_writes.rs  settings_roundtrip.rs  store_diff_tests.rs  wall_clock_budget.rs
flow-monitor/src-tauri/tests/fixtures/status/: malformed_partial.md  mtime_fallback.md  notes_multi.md  recent_notes.md  recent_updated.md  template_baseline.md
scripts/: tier-rollout-migrate.sh
test/: smoke.sh  t100_taxonomy_classification.sh  t101_runtime_handoff_note.sh  t102_stage_matrix.sh  t103_prd_templates_shape.sh  t104_entry_commands_shape.sh  t105_request_backward_compat.sh  t106_pm_tpm_status_shape.sh  t107_preflight_lint_and_body.sh  t108_precommit_preflight_wiring.sh  t109_marker_coverage.sh  t10_summary.sh  t110_runtime_sandbox_acs.sh  t111_baseline_diff_shape.sh  t112_init_seeds_preflight_files.sh  t113_scaff_src_resolver.sh  t114_seed_settings_json.sh  t12_docs.sh  t13_settings_json.sh  t14_rules_dir_structure.sh  t15_rules_schema.sh  t16_hook_exec_bit.sh  t17_hook_happy_path.sh  t18_hook_failsafe.sh  t19_hook_bad_frontmatter.sh  t20_hook_lang_lazy.sh  t21_agent_line_count.sh  t22_agent_header_grep.sh  t23_memory_required.sh  t24_appendix_pointers.sh  t25_no_duplication.sh  t26_no_new_command.sh  t27_settings_json_preserves_keys.sh  t28_settings_json_idempotent.sh  t29_claude_symlink_hooks_pair.sh  t2_flag_parsing.sh  t30_stop_hook_happy_path.sh  t31_stop_hook_failsafe.sh  (+88 more)
(+629 files in other folders)
