[package]
name = "flow-monitor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a name clash between the lib and bin crates on Windows
# (see https://github.com/rust-lang/cargo/issues/8519).
name = "flow_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Enable this feature after T6 merges to switch store.rs from the stub
# SessionState to the real crate::status_parse::SessionState.
status_parse_real = []

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2", features = [] }
tauri-plugin-opener = "2.0"
tokio = { version = "1.44", features = ["rt-multi-thread", "time", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"

